# python-pixi-project-template

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  cookiecutter.json  pixi.toml  pyproject.toml  tasks.py
tests/: test_cookiecutter.py
{{cookiecutter.repository}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pixi.toml  pyproject.toml
{{cookiecutter.repository}}/.github/actions/setup/: action.yml
{{cookiecutter.repository}}/.github/workflows/: check.yml  test.yml
{{cookiecutter.repository}}/src/example_app/: main.py
{{cookiecutter.repository}}/tasks/: __init__.py  actions.py  build.py  checks.py  cleans.py  commits.py  containers.py  docs.py  formats.py  installs.py  packages.py  tests.py
