# https://pixi.sh/dev/advanced/pyproject_toml/
[project]
name = "cookiecutter-pixi-bootstrap-env"
requires-python = ">=3.12"
authors = ["Xavier Nogueira <github@xaviernogueira>"]
dependencies = [
   "commitizen = ^3.28.0",
   "invoke = ^2.2.0",
   "pre-commit = ^3.7.1",
   "pytest = ^8.3.2",
   "pytest-cookies = ^0.7.0",
   "pytest-shell-utilities = ^1.9.0",
]
readme = "README.md"
license = "MIT"
package-mode = false


[tool.pixi.projects]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.tasks]
install = { cmd = ["pixi", "install"] }
hooks = { cmd = ["pixi", "run", "pre-commit", "install"], depends-on = ["install"] }
test = { cmd = ["pixi", "run", "pytest", "tests/"], depends-on = ["install"] }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

