# https://pixi.sh/dev/advanced/pyproject_toml/
[project]
name = "cookiecutter-pixi-bootstrap-env"
requires-python = "== 3.12"
authors = [{ name = "Xavier Nogueira", email = "xavier.rojas.nogueira@gmail.com"}]
readme = "README.md"
license = "MIT"
package-mode = false

# PyPI dependencies
dependencies = [
    "pytest ~= 8.3.2",
    "pytest-shell-utilities ~= 1.9.0",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
pre-commit = "3.7.1"
pytest-cookies = "0.7.0"

[tool.pixi.tasks]
install = { cmd = ["pixi", "install"] }
hooks = { cmd = ["pixi", "run", "pre-commit", "install"], depends-on = ["install"] }
test = { cmd = ["pixi", "run", "pytest", "tests/"], depends-on = ["install"] }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
