# https://pixi.sh/dev/advanced/pyproject_toml/
[project]
name = "cookiecutter-pixi-bootstrap-env"
requires-python = "== 3.12"
authors = [{ name = "Xavier Nogueira", email = "xavier.rojas.nogueira@gmail.com"}]
readme = "README.md"
license = "MIT"

# PyPI dependencies
dependencies = [
    "toml",
    "invoke",
    "pytest ~= 8.3.2",
    "pytest-shell-utilities ~= 1.9.0",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
pytest-cookies = "0.7.0.*"

[tool.pixi.tasks]
install = { cmd = ["pixi", "install"] }
test = { cmd = ["pixi", "run", "pytest", "tests/"], depends-on = ["install"] }
push = { cmd = ["git", "push"] }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
